--- a/quickshell/translations/poexports/pt.json
+++ b/quickshell/translations/poexports/pt.json
@@ -5,11 +5,20 @@
   "%1 characters": {
     "%1 characters": "%1 caracteres"
   },
+  "%1 class(es)": {
+    "%1 class(es)": ""
+  },
   "%1 connected": {
     "%1 connected": ""
   },
   "%1 display(s)": {
     "%1 display(s)": ""
+  },
+  "%1 job(s)": {
+    "%1 job(s)": ""
+  },
+  "%1 printer(s)": {
+    "%1 printer(s)": ""
   },
   "%1 widgets": {
     "%1 widgets": ""
@@ -41,8 +50,20 @@
   "A file with this name already exists. Do you want to overwrite it?": {
     "A file with this name already exists. Do you want to overwrite it?": "Um arquivo com esse nome já existe. Você quer sobrescrevê-lo?"
   },
+  "API": {
+    "API": ""
+  },
+  "Aborted": {
+    "Aborted": ""
+  },
   "About": {
     "About": "Sobre"
+  },
+  "Accept Jobs": {
+    "Accept Jobs": ""
+  },
+  "Accepting": {
+    "Accepting": ""
   },
   "Access clipboard history": {
     "Access clipboard history": "Acesso ao histórico área de transferência"
@@ -76,6 +97,9 @@
   },
   "Add Bar": {
     "Add Bar": ""
+  },
+  "Add Printer": {
+    "Add Printer": ""
   },
   "Add Widget": {
     "Add Widget": "Adicionar Widget"
@@ -377,11 +401,20 @@
   "CUPS Missing Filter Warning": {
     "CUPS Missing Filter Warning": ""
   },
+  "CUPS Print Server": {
+    "CUPS Print Server": ""
+  },
   "Camera": {
     "Camera": ""
   },
   "Cancel": {
     "Cancel": "Cancelar"
+  },
+  "Canceled": {
+    "Canceled": ""
+  },
+  "Capabilities": {
+    "Capabilities": ""
   },
   "Capacity": {
     "Capacity": "Capacidade"
@@ -452,6 +485,9 @@
   "Clear All History?": {
     "Clear All History?": "Apagar Todo o Histórico?"
   },
+  "Clear All Jobs": {
+    "Clear All Jobs": ""
+  },
   "Click Import to add a .ovpn or .conf": {
     "Click Import to add a .ovpn or .conf": ""
   },
@@ -512,11 +548,17 @@
   "Compact Mode": {
     "Compact Mode": "Modo Compacto"
   },
+  "Completed": {
+    "Completed": ""
+  },
   "Compositor": {
     "Compositor": "Compositor"
   },
   "Configuration activated": {
     "Configuration activated": "Configuração ativada"
+  },
+  "Configure a new printer": {
+    "Configure a new printer": ""
   },
   "Configure icons for named workspaces. Icons take priority over numbers when both are enabled.": {
     "Configure icons for named workspaces. Icons take priority over numbers when both are enabled.": "Configurações de ícones para área de trabalho nomeadas. Ícones têm prioridade sobre números quando ambos estão habilitados."
@@ -592,6 +634,12 @@
   },
   "Create Dir": {
     "Create Dir": "Criar pasta"
+  },
+  "Create Printer": {
+    "Create Printer": ""
+  },
+  "Creating...": {
+    "Creating...": ""
   },
   "Critical Priority": {
     "Critical Priority": "Prioridade Crítica"
@@ -695,11 +743,20 @@
   "Delete": {
     "Delete": ""
   },
+  "Delete Class": {
+    "Delete Class": ""
+  },
+  "Delete Printer": {
+    "Delete Printer": ""
+  },
   "Delete VPN": {
     "Delete VPN": ""
   },
   "Derives colors that closely match the underlying image.": {
     "Derives colors that closely match the underlying image.": "Deriva cores que combinam de perto com a imagem de fundo."
+  },
+  "Description": {
+    "Description": ""
   },
   "Desktop background images": {
     "Desktop background images": "Imagens de fundo da área de trabalho"
@@ -917,6 +974,9 @@
   "Failed to activate configuration": {
     "Failed to activate configuration": "Erro ao ativar configuração"
   },
+  "Failed to add printer to class": {
+    "Failed to add printer to class": ""
+  },
   "Failed to cancel all jobs": {
     "Failed to cancel all jobs": ""
   },
@@ -929,8 +989,20 @@
   "Failed to connect to ": {
     "Failed to connect to ": "Erro ao conectar a "
   },
+  "Failed to create printer": {
+    "Failed to create printer": ""
+  },
   "Failed to delete VPN": {
     "Failed to delete VPN": ""
+  },
+  "Failed to delete class": {
+    "Failed to delete class": ""
+  },
+  "Failed to delete printer": {
+    "Failed to delete printer": ""
+  },
+  "Failed to disable job acceptance": {
+    "Failed to disable job acceptance": ""
   },
   "Failed to disconnect VPN": {
     "Failed to disconnect VPN": "Erro ao desconectar VPN"
@@ -944,17 +1016,35 @@
   "Failed to enable WiFi": {
     "Failed to enable WiFi": "Erro ao habilitar WiFi"
   },
+  "Failed to enable job acceptance": {
+    "Failed to enable job acceptance": ""
+  },
+  "Failed to hold job": {
+    "Failed to hold job": ""
+  },
   "Failed to import VPN": {
     "Failed to import VPN": ""
   },
   "Failed to load VPN config": {
     "Failed to load VPN config": ""
   },
+  "Failed to move job": {
+    "Failed to move job": ""
+  },
   "Failed to pause printer": {
     "Failed to pause printer": ""
   },
+  "Failed to print test page": {
+    "Failed to print test page": ""
+  },
   "Failed to remove device": {
     "Failed to remove device": "Erro ao remover dispositivo"
+  },
+  "Failed to remove printer from class": {
+    "Failed to remove printer from class": ""
+  },
+  "Failed to restart job": {
+    "Failed to restart job": ""
   },
   "Failed to resume printer": {
     "Failed to resume printer": ""
@@ -974,8 +1064,20 @@
   "Failed to update autoconnect": {
     "Failed to update autoconnect": ""
   },
+  "Failed to update description": {
+    "Failed to update description": ""
+  },
+  "Failed to update location": {
+    "Failed to update location": ""
+  },
+  "Failed to update sharing": {
+    "Failed to update sharing": ""
+  },
   "Feels Like": {
     "Feels Like": "Sensação Térmica"
+  },
+  "File": {
+    "File": ""
   },
   "File Already Exists": {
     "File Already Exists": "Arquivo já existe"
@@ -1090,6 +1192,9 @@
   },
   "Height to Edge Gap (Exclusive Zone)": {
     "Height to Edge Gap (Exclusive Zone)": "Distância da Borda (Zona Exclusiva)"
+  },
+  "Held": {
+    "Held": ""
   },
   "Hex": {
     "Hex": ""
@@ -1285,6 +1390,12 @@
   },
   "Loading...": {
     "Loading...": ""
+  },
+  "Local": {
+    "Local": ""
+  },
+  "Location": {
+    "Location": ""
   },
   "Location Search": {
     "Location Search": "Procurar Localização"
@@ -1529,6 +1640,12 @@
   "No clipboard entries found": {
     "No clipboard entries found": "Área de transferência vazia"
   },
+  "No devices found": {
+    "No devices found": ""
+  },
+  "No drivers found": {
+    "No drivers found": ""
+  },
   "No files found": {
     "No files found": "Nenhum arquivo encontrado"
   },
@@ -1546,6 +1663,12 @@
   },
   "No printer found": {
     "No printer found": ""
+  },
+  "No printers configured": {
+    "No printers configured": ""
+  },
+  "No printers found": {
+    "No printers found": ""
   },
   "None": {
     "None": ""
@@ -1628,6 +1751,12 @@
   "Open search bar to find text": {
     "Open search bar to find text": "Abrir barra de pesquisa e encontrar texto"
   },
+  "Optional description": {
+    "Optional description": ""
+  },
+  "Optional location": {
+    "Optional location": ""
+  },
   "Other": {
     "Other": ""
   },
@@ -1684,6 +1813,9 @@
   },
   "Paused": {
     "Paused": ""
+  },
+  "Pending": {
+    "Pending": ""
   },
   "Per-Mode Wallpapers": {
     "Per-Mode Wallpapers": "Papéis de Parede por Modo"
@@ -1799,6 +1931,18 @@
   "Printer": {
     "Printer": ""
   },
+  "Printer Classes": {
+    "Printer Classes": ""
+  },
+  "Printer created successfully": {
+    "Printer created successfully": ""
+  },
+  "Printer deleted": {
+    "Printer deleted": ""
+  },
+  "Printer name (no spaces)": {
+    "Printer name (no spaces)": ""
+  },
   "Printers": {
     "Printers": ""
   },
@@ -1859,8 +2003,14 @@
   "Recently Used Apps": {
     "Recently Used Apps": "Apps Usados Recentemente"
   },
+  "Recommended available": {
+    "Recommended available": ""
+  },
   "Refresh": {
     "Refresh": "Recarregar"
+  },
+  "Reject Jobs": {
+    "Reject Jobs": ""
   },
   "Reload Plugin": {
     "Reload Plugin": "Reiniciar Plugin"
@@ -2008,6 +2158,12 @@
   },
   "Select an image file...": {
     "Select an image file...": "Selecione um arquivo de imagem..."
+  },
+  "Select device...": {
+    "Select device...": ""
+  },
+  "Select driver...": {
+    "Select driver...": ""
   },
   "Select font weight": {
     "Select font weight": "Selecionar espessura da fonte"
@@ -2303,6 +2459,12 @@
   "Terminals - Always use Dark Theme": {
     "Terminals - Always use Dark Theme": ""
   },
+  "Test Page": {
+    "Test Page": ""
+  },
+  "Test page sent to printer": {
+    "Test page sent to printer": ""
+  },
   "Text": {
     "Text": "Texto"
   },
@@ -2380,6 +2542,9 @@
   },
   "Top Section": {
     "Top Section": "Seção do topo"
+  },
+  "Total Jobs": {
+    "Total Jobs": ""
   },
   "Transition Effect": {
     "Transition Effect": "Efeito de Transição"
@@ -2500,6 +2665,9 @@
   },
   "VRR: ": {
     "VRR: ": ""
+  },
+  "Version": {
+    "Version": ""
   },
   "Vertical Deck": {
     "Vertical Deck": ""
