--- a/quickshell/translations/poexports/zh_CN.json
+++ b/quickshell/translations/poexports/zh_CN.json
@@ -5,11 +5,20 @@
   "%1 characters": {
     "%1 characters": "%1个字符"
   },
+  "%1 class(es)": {
+    "%1 class(es)": ""
+  },
   "%1 connected": {
     "%1 connected": ""
   },
   "%1 display(s)": {
     "%1 display(s)": "%1 显示"
+  },
+  "%1 job(s)": {
+    "%1 job(s)": ""
+  },
+  "%1 printer(s)": {
+    "%1 printer(s)": ""
   },
   "%1 widgets": {
     "%1 widgets": "%1 小挂件"
@@ -41,8 +50,20 @@
   "A file with this name already exists. Do you want to overwrite it?": {
     "A file with this name already exists. Do you want to overwrite it?": "已存在同名文件，是否覆盖？"
   },
+  "API": {
+    "API": ""
+  },
+  "Aborted": {
+    "Aborted": ""
+  },
   "About": {
     "About": "关于"
+  },
+  "Accept Jobs": {
+    "Accept Jobs": ""
+  },
+  "Accepting": {
+    "Accepting": ""
   },
   "Access clipboard history": {
     "Access clipboard history": "访问剪切板记录"
@@ -76,6 +97,9 @@
   },
   "Add Bar": {
     "Add Bar": "添加状态栏"
+  },
+  "Add Printer": {
+    "Add Printer": ""
   },
   "Add Widget": {
     "Add Widget": "添加小组件"
@@ -377,11 +401,20 @@
   "CUPS Missing Filter Warning": {
     "CUPS Missing Filter Warning": "CUPS 警告：缺少打印过滤器"
   },
+  "CUPS Print Server": {
+    "CUPS Print Server": ""
+  },
   "Camera": {
     "Camera": "摄像头"
   },
   "Cancel": {
     "Cancel": "取消"
+  },
+  "Canceled": {
+    "Canceled": ""
+  },
+  "Capabilities": {
+    "Capabilities": ""
   },
   "Capacity": {
     "Capacity": "电池容量"
@@ -452,6 +485,9 @@
   "Clear All History?": {
     "Clear All History?": "清空历史记录？"
   },
+  "Clear All Jobs": {
+    "Clear All Jobs": ""
+  },
   "Click Import to add a .ovpn or .conf": {
     "Click Import to add a .ovpn or .conf": ""
   },
@@ -512,11 +548,17 @@
   "Compact Mode": {
     "Compact Mode": "紧凑模式"
   },
+  "Completed": {
+    "Completed": ""
+  },
   "Compositor": {
     "Compositor": "合成器"
   },
   "Configuration activated": {
     "Configuration activated": "已应用配置"
+  },
+  "Configure a new printer": {
+    "Configure a new printer": ""
   },
   "Configure icons for named workspaces. Icons take priority over numbers when both are enabled.": {
     "Configure icons for named workspaces. Icons take priority over numbers when both are enabled.": "为已命名工作区配置图标。当数字和图标同时启用时，图标优先生效。"
@@ -592,6 +634,12 @@
   },
   "Create Dir": {
     "Create Dir": "创建目录"
+  },
+  "Create Printer": {
+    "Create Printer": ""
+  },
+  "Creating...": {
+    "Creating...": ""
   },
   "Critical Priority": {
     "Critical Priority": "紧急通知"
@@ -695,11 +743,20 @@
   "Delete": {
     "Delete": ""
   },
+  "Delete Class": {
+    "Delete Class": ""
+  },
+  "Delete Printer": {
+    "Delete Printer": ""
+  },
   "Delete VPN": {
     "Delete VPN": ""
   },
   "Derives colors that closely match the underlying image.": {
     "Derives colors that closely match the underlying image.": "提取与壁纸高度匹配的颜色。"
+  },
+  "Description": {
+    "Description": ""
   },
   "Desktop background images": {
     "Desktop background images": "桌面壁纸"
@@ -917,6 +974,9 @@
   "Failed to activate configuration": {
     "Failed to activate configuration": "无法应用配置"
   },
+  "Failed to add printer to class": {
+    "Failed to add printer to class": ""
+  },
   "Failed to cancel all jobs": {
     "Failed to cancel all jobs": "无法取消所有任务"
   },
@@ -929,8 +989,20 @@
   "Failed to connect to ": {
     "Failed to connect to ": "无法连接至 "
   },
+  "Failed to create printer": {
+    "Failed to create printer": ""
+  },
   "Failed to delete VPN": {
     "Failed to delete VPN": ""
+  },
+  "Failed to delete class": {
+    "Failed to delete class": ""
+  },
+  "Failed to delete printer": {
+    "Failed to delete printer": ""
+  },
+  "Failed to disable job acceptance": {
+    "Failed to disable job acceptance": ""
   },
   "Failed to disconnect VPN": {
     "Failed to disconnect VPN": "断开 VPN 失败"
@@ -944,17 +1016,35 @@
   "Failed to enable WiFi": {
     "Failed to enable WiFi": "无法启用 Wi-Fi"
   },
+  "Failed to enable job acceptance": {
+    "Failed to enable job acceptance": ""
+  },
+  "Failed to hold job": {
+    "Failed to hold job": ""
+  },
   "Failed to import VPN": {
     "Failed to import VPN": ""
   },
   "Failed to load VPN config": {
     "Failed to load VPN config": ""
   },
+  "Failed to move job": {
+    "Failed to move job": ""
+  },
   "Failed to pause printer": {
     "Failed to pause printer": "无法暂停打印机"
   },
+  "Failed to print test page": {
+    "Failed to print test page": ""
+  },
   "Failed to remove device": {
     "Failed to remove device": "删除设备失败"
+  },
+  "Failed to remove printer from class": {
+    "Failed to remove printer from class": ""
+  },
+  "Failed to restart job": {
+    "Failed to restart job": ""
   },
   "Failed to resume printer": {
     "Failed to resume printer": "无法恢复打印机"
@@ -974,8 +1064,20 @@
   "Failed to update autoconnect": {
     "Failed to update autoconnect": "无法更新自动连接"
   },
+  "Failed to update description": {
+    "Failed to update description": ""
+  },
+  "Failed to update location": {
+    "Failed to update location": ""
+  },
+  "Failed to update sharing": {
+    "Failed to update sharing": ""
+  },
   "Feels Like": {
     "Feels Like": "体感温度"
+  },
+  "File": {
+    "File": ""
   },
   "File Already Exists": {
     "File Already Exists": "文件已存在"
@@ -1090,6 +1192,9 @@
   },
   "Height to Edge Gap (Exclusive Zone)": {
     "Height to Edge Gap (Exclusive Zone)": "与屏幕边缘的间距（独占区）"
+  },
+  "Held": {
+    "Held": ""
   },
   "Hex": {
     "Hex": "十六进制"
@@ -1285,6 +1390,12 @@
   },
   "Loading...": {
     "Loading...": ""
+  },
+  "Local": {
+    "Local": ""
+  },
+  "Location": {
+    "Location": ""
   },
   "Location Search": {
     "Location Search": "位置搜索"
@@ -1529,6 +1640,12 @@
   "No clipboard entries found": {
     "No clipboard entries found": "无可用记录"
   },
+  "No devices found": {
+    "No devices found": ""
+  },
+  "No drivers found": {
+    "No drivers found": ""
+  },
   "No files found": {
     "No files found": "未找到文件"
   },
@@ -1546,6 +1663,12 @@
   },
   "No printer found": {
     "No printer found": "未找到打印机"
+  },
+  "No printers configured": {
+    "No printers configured": ""
+  },
+  "No printers found": {
+    "No printers found": ""
   },
   "None": {
     "None": "无"
@@ -1628,6 +1751,12 @@
   "Open search bar to find text": {
     "Open search bar to find text": "打开搜索栏以查找文本"
   },
+  "Optional description": {
+    "Optional description": ""
+  },
+  "Optional location": {
+    "Optional location": ""
+  },
   "Other": {
     "Other": "其他"
   },
@@ -1684,6 +1813,9 @@
   },
   "Paused": {
     "Paused": "暂停"
+  },
+  "Pending": {
+    "Pending": ""
   },
   "Per-Mode Wallpapers": {
     "Per-Mode Wallpapers": "按模式设置壁纸"
@@ -1799,6 +1931,18 @@
   "Printer": {
     "Printer": ""
   },
+  "Printer Classes": {
+    "Printer Classes": ""
+  },
+  "Printer created successfully": {
+    "Printer created successfully": ""
+  },
+  "Printer deleted": {
+    "Printer deleted": ""
+  },
+  "Printer name (no spaces)": {
+    "Printer name (no spaces)": ""
+  },
   "Printers": {
     "Printers": "打印机"
   },
@@ -1859,8 +2003,14 @@
   "Recently Used Apps": {
     "Recently Used Apps": "最近使用的应用"
   },
+  "Recommended available": {
+    "Recommended available": ""
+  },
   "Refresh": {
     "Refresh": "刷新"
+  },
+  "Reject Jobs": {
+    "Reject Jobs": ""
   },
   "Reload Plugin": {
     "Reload Plugin": "重载插件"
@@ -2008,6 +2158,12 @@
   },
   "Select an image file...": {
     "Select an image file...": "选择一张图片..."
+  },
+  "Select device...": {
+    "Select device...": ""
+  },
+  "Select driver...": {
+    "Select driver...": ""
   },
   "Select font weight": {
     "Select font weight": "选择字体粗细"
@@ -2303,6 +2459,12 @@
   "Terminals - Always use Dark Theme": {
     "Terminals - Always use Dark Theme": "终端总使用暗色主题"
   },
+  "Test Page": {
+    "Test Page": ""
+  },
+  "Test page sent to printer": {
+    "Test page sent to printer": ""
+  },
   "Text": {
     "Text": "文本"
   },
@@ -2380,6 +2542,9 @@
   },
   "Top Section": {
     "Top Section": "顶部区域"
+  },
+  "Total Jobs": {
+    "Total Jobs": ""
   },
   "Transition Effect": {
     "Transition Effect": "过渡效果"
@@ -2500,6 +2665,9 @@
   },
   "VRR: ": {
     "VRR: ": "可变刷新率: "
+  },
+  "Version": {
+    "Version": ""
   },
   "Vertical Deck": {
     "Vertical Deck": "垂直 Deck"
